--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,12 @@
+@article{baydin2018automatic,
+  title={Automatic differentiation in machine learning: a survey},
+  author={Baydin, Atilim Gunes and Pearlmutter, Barak A and Radul, Alexey Andreyevich and Siskind, Jeffrey Mark},
+  journal={Journal of machine learning research},
+  volume={18},
+  year={2018},
+  publisher={Journal of Machine Learning Research}
+}
+
 @misc{k2,
   title = {{K2}},
   year = {2020},
