--- a/notebooks/acceptors_and_transducers.ipynb
+++ b/notebooks/acceptors_and_transducers.ipynb
@@ -23,6 +23,13 @@
        "             .figure {display:table; margin:auto;}\n",
        "             .img {float: left; margin: 10px;}\n",
        "             .caption {display:table-caption;caption-side:bottom;text-align:justify;color: rgba(0,0,0,0.6);}\n",
+       "             td { background: white;}\n",
+       "            .table_caption {\n",
+       "                font-size:14px;\n",
+       "                float: left;\n",
+       "                text-align: justify;\n",
+       "                color: rgba(0,0,0,0.6);\n",
+       "            }\n",
        "        </style>\n",
        "        "
       ],
@@ -49,11 +56,25 @@
     "\n",
     "The broad class of graphs we are going to look at are finite-state automata. These include deterministic finite-state automata (DFAs) and non-deterministic finite-state automata (NFAs). More specifically we will consider a generalization of DFAs and NFAs called weighted finite-state acceptors (WFSAs). That's a mouthful, so we will just call them *acceptors*. We will also consider a further generalization of an acceptor called a *transducer* (weighted finite-state transducers or WFSTs). The following figure shows the relation between these three graphs; transducers, acceptors, and automtata. Transducers are the most expressive in terms of their representational power, followed by acceptors followed by unweighted automata.\n",
     "\n",
-    "![wfsa_classes](figures/wfsa_classes.svg)\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/wfsa_classes.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "      A hierarchy of classes graph.\n",
+    "  </div>\n",
+    "</div>\n",
     "\n",
     "Before we dive into acceptors and transducers, let's introduce some general graph terminology that we will use throughout. In the following graph a *state* or *node* is represented by a circle. The arrows represent connections between two states. We usually refer to these as *arcs* but sometimes also *edges*. The graph is directed since the connections between states are unidirectional arrows. The arcs in a graph can have labels. In the graph below the arc between states $0$ and $1$ has a label of $a$. Similarly, the arc between states $1$ and $2$ has a label of $b$. The graph is an example of a finite-state automata (FSA) or finite-state machine (FSM), so called because it has a finite number of nodes. \n",
     "\n",
-    "![simple_automata](figures/simple_automata.svg)\n",
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/simple_automata.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "     An example of a simple finite-state automata.\n",
+    "  </div>\n",
+    "</div>\n",
     "\n",
     "An automata is deterministic if for each state and label pair there is only one outgoing transition which matches that label. An automata is nondeterministic if multiple transitions leaving a state have the same label. The graphs below show an example of a deterministic and a nondeterministic automata. In general, we will allow acceptors and transducers to be nondeterministic.\n",
     "\n",
@@ -82,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2e4bd14d",
    "metadata": {},
    "outputs": [],
@@ -355,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "67b636cf",
    "metadata": {},
    "outputs": [],
@@ -374,11 +395,11 @@
     "# the same value as the input label\n",
     "fst.add_arc(src_node=0, dst_node=1, label=0)\n",
     "\n",
-    "# Add an arc from node 0 to 2 with the same input and output label of 1\n",
-    "fst.add_arc(src_node=0, dst_node=1, ilabel=1, olabel=1)\n",
+    "# Add an arc from node 0 to 2 with the same input and output label index of 1\n",
+    "fst.add_arc(src_node=0, dst_node=1, ilabel=1, olabel=1, weight=2)\n",
     "\n",
     "# However, we can add an arc with a different input and output label.\n",
-    "fst.add_arc(1, 2, 1, 2)\n",
+    "fst.add_arc(src_node=1, dst_node=2, ilabel=1, olabel=2, weight=3)\n",
     "\n",
     "gtn.draw(fst, \"figures/simple_fst.svg\", isymbols=isymbols, osymbols=osymbols)"
    ]
@@ -388,16 +409,62 @@
    "id": "0c0229bf",
    "metadata": {},
    "source": [
-    "The arc labels distinguish an acceptor from a transducer. A transducer has both an input and output arc label. The arc labels are of the form $a:x/0$ where $a$ is the input label $x$ is the output label and $0$ is the weight. An acceptor can be represented as a transducer where the input and output labels on every arc are identical.\n",
+    "The arc labels distinguish an acceptor from a transducer. A transducer has both an input and output arc label. The arc labels are of the form $a\\!:\\!x/0$ where $a$ is the input label $x$ is the output label and $0$ is the weight. An acceptor can be represented as a transducer where the input and output labels on every arc are identical.\n",
     "\n",
     "![simple fst](figures/simple_fst.svg)\n",
     "\n",
-    "Instead of saying that a transducer accepts a given string, we say that it *transduces* one string to another. The above graph transducer the string $ab$ to the string $xz$ and the string $bb$ to the string $yz$. The weights of a string are computed in the same way as they are for an acceptor."
+    "Instead of saying that a transducer accepts a given string, we say that it *transduces* one string to another. The above graph transducer the string $ab$ to the string $xz$ and the string $bb$ to the string $yz$. The weights of a transduced pair is computed in the same way as in an acceptor. The scores of the individual arcs on the path are summed. The path scores are combined with *log-sum-exp*. So the weight of the transduced pair $(ab, xz)$ in the above graph is $0+3 = 3$.\n",
+    "\n",
+    "We have to generalize concept of the language from an acceptor to a transducer. We'll call this generalization the transduced set, and represent it with the symbol $\\mathcal{T}$. If $T$ is a transducer, then $\\mathcal{T}(T)$ is the set of pairs of strings transduced by $T$. More formally, a pair of strings $(x, y) \\in \\mathcal{T}(T)$ if $T$ transduces $x$ to $y$.\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "Compute the score of the transduced pair $(aab, zyy)$ in the graph below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
+   "id": "51312f4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fst = gtn.Graph()\n",
+    "fst.add_node(start=True)\n",
+    "fst.add_node()\n",
+    "fst.add_node()\n",
+    "fst.add_node(start=False, accept=True)\n",
+    "\n",
+    "fst.add_arc(src_node=0, dst_node=0, ilabel=0, olabel=2, weight=1)\n",
+    "fst.add_arc(src_node=0, dst_node=1, ilabel=0, olabel=2, weight=2)\n",
+    "fst.add_arc(src_node=1, dst_node=3, ilabel=0, olabel=1, weight=3)\n",
+    "fst.add_arc(src_node=3, dst_node=3, ilabel=1, olabel=1, weight=1)\n",
+    "fst.add_arc(src_node=0, dst_node=2, ilabel=0, olabel=1, weight=2)\n",
+    "fst.add_arc(src_node=2, dst_node=3, ilabel=1, olabel=1, weight=3)\n",
+    "\n",
+    "gtn.draw(fst, \"figures/fst_ex_score.svg\", isymbols=isymbols, osymbols=osymbols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec3ba2f6",
+   "metadata": {},
+   "source": [
+    "<div class=\"figure\">\n",
+    "  <div class=\"img\">\n",
+    "    <img src=\"figures/fst_ex_score.svg\"/>\n",
+    "  </div>\n",
+    "  <div class=\"caption\" markdown=\"span\">\n",
+    "    Compute the score of the transduced path $aab$ to $zyy$.\n",
+    "  </div>\n",
+    "</div>\n",
+    "\n",
+    "The two paths which transduce $aab$ to $zyy$ are following the state sequence $0 \\rightarrow 1 \\rightarrow 3 \\rightarrow 3$ and $0 \\rightarrow 0 \\rightarrow 2 \\rightarrow 3$. The score of the first path is $6$ and the score of the second path is $6$. So the overall score is $\\log \\left(e^6 + e^6\\right) = 6.69$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "adcf9bc8",
    "metadata": {},
    "outputs": [],
