--- a/acceptors_transducers.tex
+++ b/acceptors_transducers.tex
@@ -1,3 +1,6 @@
+\documentclass[main.tex]{subfiles}
+\begin{document}
+
 \section{Acceptors and Transducers}
 \label{sec:acceptors_transducers}
 
@@ -35,3 +38,5 @@ acceptors followed by unweighted automata.
 %     The graph on the left is deterministic whereas the graph on the right is nondeterministic.
 %  </div>
 %</div>
+
+\end{document}
