--- a/advanced_operations.tex
+++ b/advanced_operations.tex
@@ -1,2 +1,7 @@
+\documentclass[main.tex]{subfiles}
+\begin{document}
+
 \section{Advanced Operations}
 \label{sec:advanced_operations}
+
+\end{document}
