--- a/introduction.tex
+++ b/introduction.tex
@@ -1,2 +1,22 @@
+\documentclass[main.tex]{subfiles}
+\begin{document}
+
 \section{Introduction}
 \label{sec:introduction}
+
+\begin{table}[ht]
+    \caption{The analogous operations between tensors and
+    automata (acceptors and transducers).}
+    \centering
+    \begin{tabular}{c c}
+    \toprule
+        Tensor & Automatai \\
+    \midrule
+        Matrix multiplication, convolution & Intersect, compose \\
+        Reduction ops (sum, prod, ...) & Shortest distance (forward, Viterbi) \\
+    \bottomrule
+    \end{tabular}
+    \label{tab:tensor_wfst_analogy}
+\end{table}
+
+\end{document}
